src/dev/ingress_https_redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware 
metadata:
  name: redirect-https-middleware
  namespace: traefik-ingress
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-https-api
  namespace: traefik-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev-tg-api.somniumgame.com`)
      kind: Rule 
      services:
        - name: traefik
          port: 80
      middlewares:
        - name: redirect-https-middleware
          namespace: traefik-ingress
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: redirect-https-ui
#   namespace: traefik-v2
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`dev-ui.bizprotect.org`)
#       kind: Rule 
#       services:
#         - name: traefik
#           port: 80
#       middlewares:
#         - name: redirect-https-middleware
#           namespace: traefik-v2
